Social media share buttons + fix cancel button overflow when replying to a comment.

--- a/frontend/src/components/comments/styles/comment.module.css
+++ b/frontend/src/components/comments/styles/comment.module.css
@@ -75,3 +75,9 @@
   height: auto;
   margin-right: 0.3rem;
 }
+
+@media screen and (min-width: 1024px) {
+  .comment_text h5 {
+    font-size: 0.875rem;
+  }
+}
