--- a/frontend/src/components/comments/styles/commentform.module.css
+++ b/frontend/src/components/comments/styles/commentform.module.css
@@ -38,6 +38,8 @@ comment_buttons_wrapper {
   align-items: center;
   column-gap: 0.625rem;
   padding-top: 0.5rem;
+  flex-direction: column-reverse;
+  row-gap: 0.5rem;
 }
 
 .comment_button {
@@ -51,4 +53,10 @@ comment_buttons_wrapper {
   font-size: 1rem;
   cursor: pointer;
   margin-left: 0.5rem;
+}
+
+@media (min-width: 26.25rem) {
+  comment_buttons_wrapper {
+    flex-direction: row;
+  }
 }
